--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.3.0'
 
 dependencies:
   flutter:
@@ -14,10 +14,10 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.3.0
-  firebase_auth: ^2.0.0
-  cloud_firestore: ^2.3.0
-  google_sign_in: ^5.0.3
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+  cloud_firestore: ^4.14.0
+  google_sign_in: ^6.1.6
 
 dev_dependencies:
   flutter_test:
